plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.5'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
}

group = 'kr.co'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // web
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // database
    runtimeOnly 'com.mysql:mysql-connector-j'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.flywaydb:flyway-mysql'

    // redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation("org.apache.commons:commons-pool2:2.12.1")

    // lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // env
    implementation("me.paulschwarz:spring-dotenv:4.0.0")

    // swagger
    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6")
    implementation("io.swagger.core.v3:swagger-annotations:2.2.30")

    // Spring AI
    implementation platform("org.springframework.ai:spring-ai-bom:1.0.0")
    implementation("org.springframework.ai:spring-ai-starter-model-openai")
    implementation("org.springframework.ai:spring-ai-advisors-vector-store")
    implementation("org.springframework.ai:spring-ai-rag")
    implementation("org.springframework.ai:spring-ai-redis-store") {
        exclude group: 'org.json', module: 'json'
    }

    // MQTT
    implementation 'org.springframework.boot:spring-boot-starter-integration'
    implementation 'org.springframework.integration:spring-integration-mqtt'
    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'

    // HTML Parsing
    implementation group: 'org.jsoup', name: 'jsoup', version: '1.20.1'

    // AWS S3, CDN
    implementation("software.amazon.awssdk:s3:2.31.41")
    implementation("software.amazon.awssdk:cloudfront:2.31.41")

    // SMS
    implementation 'com.solapi:sdk:1.0.3'

    // mail
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // firebase
    implementation 'com.google.firebase:firebase-admin:9.8.0'

    // monitoring
    implementation ("org.springframework.boot:spring-boot-starter-actuator")
    runtimeOnly ("io.micrometer:micrometer-registry-prometheus")

    // rabbitMQ
    implementation 'org.springframework.boot:spring-boot-starter-amqp'

    // test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.springframework.amqp:spring-rabbit-test'

    // test containers
    testImplementation("org.springframework.boot:spring-boot-testcontainers")
    testImplementation("com.redis.testcontainers:testcontainers-redis:1.6.4")
    testImplementation("org.testcontainers:mysql:1.20.1")
    testImplementation("org.testcontainers:localstack:1.20.1")
    testImplementation("org.testcontainers:junit-jupiter:1.20.1")
    testImplementation("org.testcontainers:rabbitmq:1.20.1")
}

tasks.named('test') {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                '**/dto/**',
                '**/request/**',
                '**/response/**',
                '**/config/**',
                '**/common/**',
                '**/enums/**',
                '**/type/**',
                '**/*Application*',
            ])
        }))
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.80
            }
        }
    }
}

tasks.bootBuildImage.createdDate = "now"

springBoot.buildInfo { properties {} }
